--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,8 @@ jobs:
 
             - name: Build
               run: pnpm run build --preset github_pages
-              env:
-                  NUXT_APP_BASE_URL: /${{ github.event.repository.name }}/
+              # env:
+                  # NUXT_APP_BASE_URL: /${{ github.event.repository.name }}/
 
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
